--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,11 @@
 {
-    "builds": [
-        {
-            "src": "music_site/wsgi.py",
-            "use": "@vercel/python",
-            "config": {
-                "maxLambdaSize": "15mb",
-                "runtime": "python3.11.3"
-            }
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "music_site/wsgi.py"
-        }
-    ]
+  "builds": [{
+      "src": "music_site/wsgi.py",
+      "use": "@vercel/python",
+      "config": {"maxLambdaSize": "15mb","runtime": "python3.11.3"}
+    }],
+  "routes": [{
+      "src": "/(.*)",
+      "dest": "music_site/wsgi.py"
+    }]
 }
