--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2024.12.14
 charset-normalizer==3.4.1
 Django==5.1.5
 idna==3.10
+packaging==24.2
 requests==2.32.3
 sqlparse==0.5.3
 tzdata==2025.1
